# daylatro

./: .gitignore  Dockerfile  Main.hs  cabal.project  daylatro.cabal  fly.toml
.devcontainer/: compose.yaml  devcontainer.json
.github/workflows/: ci.yml
source/executable/: Main.hs
