cabal-version: 3.12
name: daylatro
version: 0.2025.2.8
synopsis: Generate daily Balatro seeds.
description:
  Daylatro is a tool for generating daily Balatro seeds and comparing runs
  using that seed.

category: Game
license: 0BSD
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/daylatro
  type: git

flag pedantic
  default: False
  manual: True

executable daylatro
  autogen-modules: PackageInfo_daylatro
  build-depends:
    base ^>=4.21.0.0,
    bytestring ^>=0.12.2.0,
    exceptions ^>=0.10.9,
    formatting ^>=7.2.0,
    http-types ^>=0.12.4,
    lucid2 ^>=0.0.20240424,
    network-uri ^>=2.6.4.2,
    random ^>=1.3.0,
    sqlite-simple ^>=0.4.19.0,
    text ^>=2.1.2,
    time ^>=1.14,
    wai ^>=3.2.4,
    warp ^>=3.4.7,

  default-language: Haskell2010
  ghc-options:
    -rtsopts
    -threaded
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  main-is: Main.hs
  other-modules: PackageInfo_daylatro

  if flag(pedantic)
    ghc-options: -Werror
